# atomkern_os

./: Cargo.toml  build.rs
.cargo/: config.toml
abi/: Cargo.toml  build.rs
abi/src/: lib.rs  proc.rs  syscall.s
example/: Cargo.toml
example/src/: sycall.s
example2/: Cargo.toml  build.rs
example2/conf/: linker.ld
example2/src/: main.rs
kernel/: .gitignore  Cargo.toml  build.rs  x64.json
kernel/.cargo/: config.toml  runner.sh
kernel/conf/: limine.cfg  linker.ld
kernel/src/: acpi.rs  elf.rs  font  font.psf  framebuffer.rs  fuck  interrupt.rs  long_mode.s  long_mode2.s  main.rs  pcie.rs  proc.rs  proc.s  vga_buffer.rs  xhci.rs
kernel/src/framebuffer/: pixel.rs
kernel/src/misc/: cpu_local.rs  mod.rs
kernel/src/mm/: virt.rs
kernel/src/mm/phys/: frame.rs  mod.rs
libos/: Cargo.toml  build.rs
libos/src/: lib.rs
newalloc/: Cargo.toml  main2.rs
newalloc/src/: lib.rs  main.rs
simple_boot/src/: main.rs
src/: main.rs
