[package]
name = "atomkern_os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11"
# atomkern = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[patch.crates-io]
bootloader = { path = "../bootloader" }
bootloader_api = { path = "../bootloader/api" }
