[package]
name = "atomkern-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cfg-if = "1.0"
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }

[features]
rustc-dep-of-std = [
	"core",
	"compiler_builtins",
	# "cfg-if/rustc-dep-of-std"
]

[build-dependencies]
nasm-rs = "0.2.4"
