[package]
name = "example2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
intrusive-collections = "0.9.5"
array-init = "2.1.0"
rlibc = "1.0.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], path = "../../tokio/tokio/" }

[dependencies.newalloc]
path = "../newalloc/"

[build-dependencies]
nasm-rs = "0.2.4"
