[package]
name = "example2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros"]
path = "../../tokio/tokio/"

[dependencies]
libm = "0.2"
smoltcp = "0.10.0"
atomkern-abi = {version = "*", path = "../abi/"}
proc-bitfield = "0.3.0"
bitflags = "2.4.1"
bytemuck = "1.14.0"
num_enum = "0.7.1"
bitvec = "1.0.1"
log = "0.4.20"
# simple_logger = "4.2.0"
