[package]
name = "atomkern"
version = "0.1.0"
edition="2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
debug = true

[dependencies]
limine = "0.1.10"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
proc-bitfield = "0.2.2"
bytemuck = "1.13.0"
bitflags = "2.0.1"
atomkern-abi = { path = "../abi/" }

[dependencies.num_enum]
version = "0.5.9"
default-features = false

[dependencies.arrayvec]
version = "0.7.2"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.bitvec]
version = "1"
default-features = false
# features = ["atomic", "alloc"]

[dependencies.nom]
version = "7"
default-features = false

[dependencies.snafu]
version = "0.7.4"
default-features = false
features = ["unstable-core-error", "unstable-try-trait"]

[build-dependencies]
nasm-rs = "0.2.4"
# cc = "1.0"
