[package]
name = "libos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cfg-if = "1.0"
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }
# bitvec = "1"
# array-init = "2.1.0"

[features]
rustc-dep-of-std = [
	"core",
	"compiler_builtins",
	# "cfg-if/rustc-dep-of-std"
]

# [dependencies.newalloc]
# path = "../newalloc/"
#  
[dependencies.intrusive-collections]
version = "0.9.5"
default-features = false
path = "../../intrusive-rs/"
features = ["rustc-dep-of-std"]

[dependencies.array-init]
version = "2.1.0"
path = "../../array-init/"
features = ["rustc-dep-of-std"]

[dependencies.bitvec]
version = "1"
default-features = false
path = "../../ferrilab/bitvec/"
features = ["rustc-dep-of-std"]

[build-dependencies]
nasm-rs = "0.2.4"
