[package]
name = "newalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cfg-if = "1.0"
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }

[dependencies.atomkern-abi]
path = "../abi/"
features = ["rustc-dep-of-std"]

[dependencies.intrusive-collections]
version = "0.9.5"
default-features = false
path = "vendor/intrusive-collections/"
features = ["rustc-dep-of-std"]

[dependencies.array-init]
version = "2.1.0"
path = "vendor/array-init/"
features = ["rustc-dep-of-std"]

[dependencies.bitvec]
version = "1"
default-features = false
path = "vendor/bitvec/"
features = ["rustc-dep-of-std"]

[dependencies.cell-family]
version = "0.1.0"
default-features = false
path = "vendor/cell-family"
features = ["nightly", "rustc-dep-of-std"]

[features]
rustc-dep-of-std = [
	"core",
	"compiler_builtins",
	# "cfg-if/rustc-dep-of-std"
]
